--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://yurchykyur.github.io/project-stephen-js",
+  "homepage": "https://GoitStudentsWorks.github.io/85_js_yurchykyur",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /project-stephen-js/"
+    "build": "parcel build src/*.html --public-url /85_js_yurchykyur/"
   },
   "repository": {
     "type": "git",
